--- a/SiegeDefenseCode/Assembly-CSharp.csproj
+++ b/SiegeDefenseCode/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\BallControl.cs" />
+     <Compile Include="Assets\BlockScript.cs" />
      <Compile Include="Assets\GameEngine.cs" />
      <None Include="Assets\Standard Assets\Projectors\Guidelines.txt" />
      <None Include="Assets\Standard Assets (Mobile)\Shaders\Particle Shaders\Mobile Multiply Culled.shader" />
