--- a/SiegeDefenseCode/Assembly-CSharp-vs.csproj
+++ b/SiegeDefenseCode/Assembly-CSharp-vs.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\BallControl.cs" />
+     <Compile Include="Assets\BlockGUIScript.cs" />
      <Compile Include="Assets\BlockScript.cs" />
      <Compile Include="Assets\GameEngine.cs" />
      <None Include="Assets\Standard Assets\Projectors\Guidelines.txt" />
